@@ -4283,32 +4283,64 @@ hr {
   --sat: 10%;
 }
 
+.sat15 {
+  --sat: 15%;
+}
+
 .sat20 {
   --sat: 20%;
+}
+
+.sat25 {
+  --sat: 25%;
 }
 
 .sat30 {
   --sat: 30%;
 }
 
+.sat35 {
+  --sat: 35%;
+}
+
 .sat40 {
   --sat: 40%;
+}
+
+.sat45 {
+  --sat: 45%;
 }
 
 .sat50 {
   --sat: 50%;
 }
 
+.sat55 {
+  --sat: 55%;
+}
+
 .sat60 {
   --sat: 60%;
+}
+
+.sat65 {
+  --sat: 65%;
 }
 
 .sat70 {
   --sat: 70%;
 }
 
+.sat75 {
+  --sat: 75%;
+}
+
 .sat80 {
   --sat: 80%;
+}
+
+.sat85 {
+  --sat: 85%;
 }
 
 .sat90 {
@@ -4335,32 +4367,64 @@ hr {
   --lum: 10%;
 }
 
+.lum15 {
+  --lum: 15%;
+}
+
 .lum20 {
   --lum: 20%;
+}
+
+.lum25 {
+  --lum: 25%;
 }
 
 .lum30 {
   --lum: 30%;
 }
 
+.lum35 {
+  --lum: 35%;
+}
+
 .lum40 {
   --lum: 40%;
+}
+
+.lum45 {
+  --lum: 45%;
 }
 
 .lum50 {
   --lum: 50%;
 }
 
+.lum55 {
+  --lum: 55%;
+}
+
 .lum60 {
   --lum: 60%;
+}
+
+.lum65 {
+  --lum: 65%;
 }
 
 .lum70 {
   --lum: 70%;
 }
 
+.lum75 {
+  --lum: 75%;
+}
+
 .lum80 {
   --lum: 80%;
+}
+
+.lum85 {
+  --lum: 85%;
 }
 
 .lum90 {
@@ -4582,32 +4646,64 @@ hr {
   --bg-sat: 10%;
 }
 
+.bg-sat15 {
+  --bg-sat: 15%;
+}
+
 .bg-sat20 {
   --bg-sat: 20%;
+}
+
+.bg-sat25 {
+  --bg-sat: 25%;
 }
 
 .bg-sat30 {
   --bg-sat: 30%;
 }
 
+.bg-sat35 {
+  --bg-sat: 35%;
+}
+
 .bg-sat40 {
   --bg-sat: 40%;
+}
+
+.bg-sat45 {
+  --bg-sat: 45%;
 }
 
 .bg-sat50 {
   --bg-sat: 50%;
 }
 
+.bg-sat55 {
+  --bg-sat: 55%;
+}
+
 .bg-sat60 {
   --bg-sat: 60%;
+}
+
+.bg-sat65 {
+  --bg-sat: 65%;
 }
 
 .bg-sat70 {
   --bg-sat: 70%;
 }
 
+.bg-sat75 {
+  --bg-sat: 75%;
+}
+
 .bg-sat80 {
   --bg-sat: 80%;
+}
+
+.bg-sat85 {
+  --bg-sat: 85%;
 }
 
 .bg-sat90 {
@@ -4634,32 +4730,64 @@ hr {
   --bg-lum: 10%;
 }
 
+.bg-lum15 {
+  --bg-lum: 15%;
+}
+
 .bg-lum20 {
   --bg-lum: 20%;
+}
+
+.bg-lum25 {
+  --bg-lum: 25%;
 }
 
 .bg-lum30 {
   --bg-lum: 30%;
 }
 
+.bg-lum35 {
+  --bg-lum: 35%;
+}
+
 .bg-lum40 {
   --bg-lum: 40%;
+}
+
+.bg-lum45 {
+  --bg-lum: 45%;
 }
 
 .bg-lum50 {
   --bg-lum: 50%;
 }
 
+.bg-lum55 {
+  --bg-lum: 55%;
+}
+
 .bg-lum60 {
   --bg-lum: 60%;
+}
+
+.bg-lum65 {
+  --bg-lum: 65%;
 }
 
 .bg-lum70 {
   --bg-lum: 70%;
 }
 
+.bg-lum75 {
+  --bg-lum: 75%;
+}
+
 .bg-lum80 {
   --bg-lum: 80%;
+}
+
+.bg-lum85 {
+  --bg-lum: 85%;
 }
 
 .bg-lum90 {
