@@ -70,13 +70,21 @@
 .bg-sat0   { --bg-sat:   0%; }
 .bg-sat5   { --bg-sat:   5%; }
 .bg-sat10  { --bg-sat:  10%; }
+.bg-sat15  { --bg-sat:  15%; }
 .bg-sat20  { --bg-sat:  20%; }
+.bg-sat25  { --bg-sat:  25%; }
 .bg-sat30  { --bg-sat:  30%; }
+.bg-sat35  { --bg-sat:  35%; }
 .bg-sat40  { --bg-sat:  40%; }
+.bg-sat45  { --bg-sat:  45%; }
 .bg-sat50  { --bg-sat:  50%; }
+.bg-sat55  { --bg-sat:  55%; }
 .bg-sat60  { --bg-sat:  60%; }
+.bg-sat65  { --bg-sat:  65%; }
 .bg-sat70  { --bg-sat:  70%; }
+.bg-sat75  { --bg-sat:  75%; }
 .bg-sat80  { --bg-sat:  80%; }
+.bg-sat85  { --bg-sat:  85%; }
 .bg-sat90  { --bg-sat:  90%; }
 .bg-sat95  { --bg-sat:  95%; }
 .bg-sat100 { --bg-sat: 100%; }
@@ -84,13 +92,21 @@
 .bg-lum0   { --bg-lum:   0%; }
 .bg-lum5   { --bg-lum:   5%; }
 .bg-lum10  { --bg-lum:  10%; }
+.bg-lum15  { --bg-lum:  15%; }
 .bg-lum20  { --bg-lum:  20%; }
+.bg-lum25  { --bg-lum:  25%; }
 .bg-lum30  { --bg-lum:  30%; }
+.bg-lum35  { --bg-lum:  35%; }
 .bg-lum40  { --bg-lum:  40%; }
+.bg-lum45  { --bg-lum:  45%; }
 .bg-lum50  { --bg-lum:  50%; }
+.bg-lum55  { --bg-lum:  55%; }
 .bg-lum60  { --bg-lum:  60%; }
+.bg-lum65  { --bg-lum:  65%; }
 .bg-lum70  { --bg-lum:  70%; }
+.bg-lum75  { --bg-lum:  75%; }
 .bg-lum80  { --bg-lum:  80%; }
+.bg-lum85  { --bg-lum:  85%; }
 .bg-lum90  { --bg-lum:  90%; }
 .bg-lum95  { --bg-lum:  95%; }
 .bg-lum100 { --bg-lum: 100%; }
