@@ -59,13 +59,21 @@
 .sat0   { --sat:   0%; }
 .sat5   { --sat:   5%; }
 .sat10  { --sat:  10%; }
+.sat15  { --sat:  15%; }
 .sat20  { --sat:  20%; }
+.sat25  { --sat:  25%; }
 .sat30  { --sat:  30%; }
+.sat35  { --sat:  35%; }
 .sat40  { --sat:  40%; }
+.sat45  { --sat:  45%; }
 .sat50  { --sat:  50%; }
+.sat55  { --sat:  55%; }
 .sat60  { --sat:  60%; }
+.sat65  { --sat:  65%; }
 .sat70  { --sat:  70%; }
+.sat75  { --sat:  75%; }
 .sat80  { --sat:  80%; }
+.sat85  { --sat:  85%; }
 .sat90  { --sat:  90%; }
 .sat95  { --sat:  95%; }
 .sat100 { --sat: 100%; }
@@ -73,13 +81,21 @@
 .lum0   { --lum:   0%; }
 .lum5   { --lum:   5%; }
 .lum10  { --lum:  10%; }
+.lum15  { --lum:  15%; }
 .lum20  { --lum:  20%; }
+.lum25  { --lum:  25%; }
 .lum30  { --lum:  30%; }
+.lum35  { --lum:  35%; }
 .lum40  { --lum:  40%; }
+.lum45  { --lum:  45%; }
 .lum50  { --lum:  50%; }
+.lum55  { --lum:  55%; }
 .lum60  { --lum:  60%; }
+.lum65  { --lum:  65%; }
 .lum70  { --lum:  70%; }
+.lum75  { --lum:  75%; }
 .lum80  { --lum:  80%; }
+.lum85  { --lum:  85%; }
 .lum90  { --lum:  90%; }
 .lum95  { --lum:  95%; }
 .lum100 { --lum: 100%; }
